Cluster-friendly version; Updated documentation; Updated CLI scripts