@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+# NOTE: This script requires `spark-submit` command declared in the PATH
 
 # Get the location for this script; handles symlinks
 function get_script_path {
@@ -20,10 +21,8 @@ declare -r script_dir="$(cd -P "$(dirname "$script_path")" && pwd)"
 declare -r base_dir="$(cd "$script_dir/.." && pwd)"
 declare -r lib_dir="$base_dir/lib"
 
-# take the parameters
-. $base_dir/bin/inc.env.sh
-
-declare -r WLEARN_JAVA_OPTS=$VM_ARGS" -XX:+AggressiveOpts"
-declare -r WLEARN_CLASSPATH=$PRJ_COMMONS_CLASSPATH
-
-nice java $WLEARN_JAVA_OPTS -cp $WLEARN_CLASSPATH org.speedd.ml.app.CNRSLoader $@
+# Execute using spark-submit
+spark-submit \
+    --properties-file $base_dir/etc/spark-defaults.conf \
+    --class org.speedd.ml.app.CNRSLoader \
+    $lib_dir/NCSR_SPEEDD-ML.jar $@
